@@ -16,6 +16,7 @@
 
 package com.alibaba.nacos.common.spi;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.LinkedHashSet;
@@ -82,9 +83,11 @@ public class NacosServiceLoader {
     
     private static Object newServiceInstance(final Class<?> clazz) {
         try {
-            return clazz.newInstance();
+            return clazz.getDeclaredConstructor().newInstance();
         } catch (IllegalAccessException | InstantiationException e) {
             throw new ServiceLoaderException(clazz, e);
+        } catch (InvocationTargetException | NoSuchMethodException e) {
+            throw new RuntimeException(e);
         }
     }
 }
